--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ material = "1.9.0"
 hilt = "2.46.1"
 junit = "4.13.2"
 lifecycle = "2.5.1"
+paging = "3.1.1"
+
 [libraries]
 
 # Dependencies of the included build-logic
@@ -30,6 +32,8 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 
 #kotlinx
 kotlinx-serialization-pluginz = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
